# prayer-times

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  README.md  flake.nix  justfile  release.toml
.claude/: settings.json
.claude/skills/changelog/: SKILL.md
.github/workflows/: ci.yml  release.yml
contrib/: prayer-times.service
src/: arguments.rs  config.rs  daemon.rs  event.rs  location.rs  madhab.rs  main.rs  method.rs  notification.rs  notification_urgency.rs  prayer.rs  prayers.rs  test_util.rs
src/arguments/: generation.rs
src/calculations/: math.rs  mod.rs
