[package]
name = "prayer-times"
version = "0.4.2"
authors = ["Ilyas Turki <turki.ilyass@gmail.com>"]
edition = "2021"
description = "Islamic Prayer Times Information and Notifications"
readme = "README.md"
homepage = "https://github.com/Yasso9/prayer-times"
repository = "https://github.com/Yasso9/prayer-times"
license = "MIT"
keywords = ["prayer", "islam", "adhan", "salah", "notification"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.44"
chrono-tz = "0.10.4"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
confy = "2.0.0"
geolocation = "0.2.1"
get_if_addrs = "0.5.3"
notify-rust = "4.14.0"
serde = "1.0.228"
strum = "0.28.0"
strum_macros = "0.28.0"
toml = "1.1.2"
